--- a/directory_style.css
+++ b/directory_style.css
@@ -1,5 +1,6 @@
-<style>
-    .folder1 {
-        background-color: #c3c3c3; 
-    }
-</style>
+body {
+  font-family: Courier New, monospace;
+  text-align: center;
+  background-color: #c3c3c3;
+  color: white;
+}
