--- a/directory_style.css
+++ b/directory_style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Courier New, monospace;
   text-align: center;
-  background-color: #008080;
+  background-color: #c3c3c3;
   color: white;
 }
