--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Courier New, monospace;
+  font-family: Lucida Console, monospace;
   text-align: center;
   background-color: #008080;
   color: white;
