--- a/directory_style.css
+++ b/directory_style.css
@@ -2,5 +2,5 @@ body {
   font-family: Courier New, monospace;
   text-align: center;
   background-color: #c3c3c3;
-  color: white;
+  color: black;
 }
