--- a/directory_style.css
+++ b/directory_style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Courier New, monospace;
   text-align: center;
-  background-color: #818181;
+  background-color: #c3c3c3;
   color: white;
 }
 
