--- a/directory_style.css
+++ b/directory_style.css
@@ -1,7 +1,6 @@
 body {
   font-family: Courier New, monospace;
   background-color: #c3c3c3;
-  text-align: center;
 }
 
 p {
@@ -24,6 +23,6 @@ p {
 .image-caption {
   width: 100%;
   font-size: 1rem; /* Adjust as needed */
-  color: white;    /* or whatever you want */
+  color: black;    /* or whatever you want */
   margin-top: 0.5rem;
 }
