--- a/style.css
+++ b/style.css
@@ -4,3 +4,34 @@ body {
   background-color: #008080;
   color: white;
 }
+
+.image-links-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(55px, 1fr));
+  gap: 25px;
+  text-align: center;
+}
+
+.image-links-container a {
+  text-decoration: none;
+  color: white;
+}
+
+.image-links-container img {
+  width: 45px;
+  height: auto;
+}
+
+.image-links-container p {
+  margin-top: 0px; /* Space between image and text */
+  font-size: 10px
+}
+
+#popup-1, #popup-2 {
+  display: none; /* Hide the popup initially */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+}
