--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Lucida console, monospace;
+  font-family: 'Lucida console', monospace;
   text-align: center;
   background-color: #008080;
   color: white;
@@ -10,6 +10,9 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(55px, 1fr));
   gap: 25px;
   text-align: center;
+  min-height: calc(100vh-30px);
+  padding: 50px;
+  box-sizing: border-box;
 }
 
 .image-links-container a {
@@ -42,7 +45,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 40px;
+  height: 30px;
   background-color: #c3c3c3; /* Windows 95 gray */
   border-top: 2px solid white;
   border-bottom: 2px solid gray;
@@ -50,8 +53,9 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
-  font-family: 'MS Sans Serif', sans-serif;
+  font-family: 'Lucida console', monospace;
   z-index: 1000;
+  box-shadow: 0 -2px #fffdfc, 0 -4px #cce9eb;
 }
 
 .start-button {
@@ -59,7 +63,7 @@ body {
   border: 2px outset white;
   padding: 5px 15px;
   font-weight: bold;
-  font-family: 'MS Sans Serif', sans-serif;
+  font-family: 'Lucida console', monospace;
   cursor: pointer;
 }
 
