--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   min-height: calc(100vh-30px);
   padding: 50px;
   box-sizing: border-box;
+  float: left;
 }
 
 .image-links-container a {
