--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 .image-links-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(55px, 1fr));
+  grid-auto-flow: column;
   gap: 25px;
   text-align: center;
   min-height: calc(100vh-30px);
