--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   gap: 25px;
   text-align: center;
   min-height: calc(100vh-30px);
-  padding: 50px;
+  padding-bottom: 50px;
   box-sizing: border-box;
 }
 
